<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mument_detail_dummy_strings">음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심</string>
    <string name="muments_recorded_by_me">내가 기록한 뮤멘트</string>
    <string name="tag_is_first">처음</string>
    <string name="tag_has_heard">다시</string>
    <string name="every_mument">모든 뮤멘트</string>
    <string name="sort_latest">최신순</string>
    <string name="mument">뮤멘트</string>
    <string name="sort_like_count">좋아요순</string>
    <string name="show_my_history"><![CDATA[나의 히스토리 보기 >]]></string>
    <string name="locker_mument_empty_title">아직 기록한 뮤멘트가 없어요.</string>
    <string name="like_count_integer_format">%d명이 좋아합니다.</string>
    <string name="go_to_mument_history_integer_format">%d개의 뮤멘트가 있는 히스토리 보러가기</string>
    <string name="record_mument">뮤멘트 기록하기</string>
    <string name="write_earliest_mument">가장 먼저 뮤멘트를 남겨n보세요.</string>
    <string name="write_first_mument">첫 뮤멘트를 남겨보세요.</string>
    <string name="cannot_load_data">데이터를 불러올 수 없습니다.</string>
    <string name="cannot_access_insta">인스타그램에 접근할 수 없습니다 :(</string>
    <string name="fail_to_delete_mument">뮤멘트를 삭제하지 못했습니다.</string>

    <!--신고하기-->
    <string name="notify_title">신고하기</string>
    <string name="notify_reason">뮤멘트를 신고하려는 이유를 알려주세요!</string>
    <string name="notify_reference">관리자 검토 후 타당한 근거 없이 신고된 내용은\n반영되지 않을 수 있습니다.</string>
    <string name="notify_not_relative">관련 없는 내용이에요.</string>
    <string name="notify_personal_info">개인정보가 노출될 위험이 있어요.</string>
    <string name="notify_not_good">욕설, 혐오, 차별 등 부적절한 내용이 있어요.</string>
    <string name="notify_noxious_content">음란적, 선정적인 유해한 콘텐츠를 포함하고 있어요.</string>
    <string name="notify_same_content">같은 내용을 도배하고 있어요.</string>
    <string name="notify_advertise">부적절한 홍보 또는 광고가 포함되어 있어요.</string>
    <string name="notify_etc">기타</string>
    <string name="notify_write_content">신고 내용을 작성해주세요.</string>
    <string name="notify_block">차단하기</string>
    <string name="block_user_header">이 유저를 차단하시겠어요?</string>
    <string name="block_user_body">이 유저의 뮤멘트가 목록에서\n더는 보이지 않아요.</string>
    <string name="notify_block_reference">신고하는 사용자의 뮤멘트를 더 이상 보고 싶지 않아요.</string>
    <string name="notify_text_num">%d/100</string>

    <!-- Component IDs -->
    <string name="id_insta_share_profile_image">id_insta_share_profile_image</string>
    <string name="id_insta_share_profile_name">id_insta_share_profile_name</string>

    <!-- Alert -->
    <string name="alert_notify_title">알림 설정하시고\n뮤멘트의 즐거움을 놓치지 마세요!</string>
    <string name="alert_notify_subtitle"><![CDATA[알림 수신 동의는 알림 설정 메뉴에서 관리하실 수 있습니다.\n보관함 탭 > 마이페이지 > 알림 설정 메뉴]]></string>
    <string name="alert_btn_noti_no">알림 받지 않기</string>
    <string name="alert_btn_noti_yes">좋아요 알림 받기</string>

    <string name="record_finish_record">🎉 뮤멘트가 작성되었어요!</string>

    <!--    modify record view-->
    <string name="modify_record">뮤멘트가 수정되었어요.</string>
</resources>