<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_every_muments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/every_mument"
        android:layout_marginTop="50dp"
        android:textColor="@color/mument_color_black2"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sort_latest"
        style="@style/TextView.Mument_C1_R12.Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:paddingVertical="5dp"
        android:text="@string/sort_latest"
        android:textColor="@color/selector_state_selected_gray1_purple1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_every_muments"
        app:layout_constraintTop_toTopOf="@id/tv_every_muments" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sort_like_count"
        style="@style/TextView.Mument_C1_R12.Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:paddingVertical="5dp"
        android:text="@string/sort_like_count"
        android:textColor="@color/selector_state_selected_gray1_purple1"
        app:layout_constraintBottom_toBottomOf="@id/tv_sort_latest"
        app:layout_constraintEnd_toStartOf="@id/tv_sort_latest"
        app:layout_constraintTop_toTopOf="@id/tv_sort_latest" />


</androidx.constraintlayout.widget.ConstraintLayout>