<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mument"
            type="com.mument_android.domain.entity.detail.MumentSummaryEntity" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_my_muments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/muments_recorded_by_me"
            android:textColor="@color/mument_color_black2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_show_my_history"
            style="@style/TextView.Mument_C1_R12.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_my_history"
            android:textColor="@color/mument_color_purple1"
            android:visibility="@{mument == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_muments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_my_muments" />

        <com.mument_android.core_dependent.ui.ShadowConstraintLayout
            android:id="@+id/cl_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_border_default_redius_11dp"
            android:elevation="8dp"
            android:paddingHorizontal="13dp"
            android:paddingTop="11dp"
            android:paddingBottom="16dp"
            android:visibility="@{mument == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/tv_my_muments">

            <ImageView
                android:id="@+id/iv_profile"
                load_profile="@{mument.user.profileImage}"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/mument_color_gray1" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextView.Mument_C1_R12.Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:text="@{mument.user.name}"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile"
                tools:text="이수지" />

            <LinearLayout
                android:id="@+id/ll_touch_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_profile">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/la_like_mument_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="@{mument.liked?100F:0F}"
                    android:visibility="@{mument.isPrivate != true ? View.VISIBLE : View.GONE}"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/heart_icn_lottie" />

                <TextView
                    android:id="@+id/tv_secret_likecount"
                    style="@style/TextView.Mument_C1_R12.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{mument.private == true ? `비밀글`: Integer.toString(mument.likeCount)}"
                    android:textColor="@color/mument_color_gray1"
                    tools:text="15" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="11dp"
                android:background="@color/mument_color_gray4"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mument_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/view"
                tools:itemCount="2"
                tools:listitem="@layout/item_mument_string_tag" />


            <TextView
                android:id="@+id/tv_content"
                style="@style/TextView.Mument_B6_M13.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingVertical="10dp"
                android:text="@{mument.content.replace(`\\n`, `\n`)}"
                android:textColor="@color/mument_color_black2"
                app:layout_constraintBottom_toTopOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="@id/rv_mument_tags"
                app:layout_constraintTop_toBottomOf="@+id/rv_mument_tags"
                tools:text="음악은 저에게 영감을 줘요, 이 곡 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게 영감을 줘요. 추천해준 이부장에게 심심한 감사의 인사를 음악은 저에게" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextView.Mument_C1_R12.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{mument.date}"
                android:textColor="@color/mument_color_gray2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1 Sep, 2020" />

        </com.mument_android.core_dependent.ui.ShadowConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            android:visibility="@{mument == null  ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_empty_header"
                style="@style/TextView.Mument_H3_B16.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mument_empty_title"
                android:textColor="@color/mument_color_gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_empty_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/write_first_mument"
                android:textColor="@color/mument_color_gray2"
                android:textSize="13dp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_header" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
